# Chess

./: CMakeLists.txt  README.md
include/: Bishop.h  Board.h  Game.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h  Square.h
lib/SFML/: SFMLConfig.cmake
src/: Bishop.cpp  Board.cpp  Game.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp  Square.cpp  main.cpp
